--- a/package.json
+++ b/package.json
@@ -1,12 +1,15 @@
 {
   "name": "ai-algo",
+  "version": "1.0.50",
   "scripts": {
-    "dev": "bun run --hot src/index.ts"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "bun run --watch src/index.ts"
   },
   "dependencies": {
-    "hono": "^4.8.5"
+    "elysia": "latest"
   },
   "devDependencies": {
-    "@types/bun": "latest"
-  }
+    "bun-types": "latest"
+  },
+  "module": "src/index.js"
 }
