--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "dev": "bun run --watch src/index.ts"
   },
   "dependencies": {
+    "breezeconnect": "^1.0.29",
     "elysia": "latest"
   },
   "devDependencies": {
