--- a/.dockerignore
+++ b/.dockerignore
@@ -4,7 +4,7 @@ docker-compose*
 .dockerignore
 .git
 .gitignore
-README.md
+*.md
 LICENSE
 .vscode
 Makefile
@@ -13,3 +13,5 @@ helm-charts
 .editorconfig
 .idea
 coverage*
+*.log
+dist
